Everything works fine. Updated the Completed and Delete Options. The only problem here is with the child of the database

--- a/Roommates/View/Grocery/GroceryCustomCell.xib
+++ b/Roommates/View/Grocery/GroceryCustomCell.xib
@@ -22,8 +22,8 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dGP-Zu-lqC" userLabel="Color">
                         <rect key="frame" x="0.0" y="0.0" width="339" height="67"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fsE-3U-ru6">
-                                <rect key="frame" x="18" y="14" width="181" height="20"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fsE-3U-ru6">
+                                <rect key="frame" x="18" y="14" width="181" height="19.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="181" id="jh3-wC-8Wm"/>
                                 </constraints>
@@ -31,7 +31,7 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Posted By" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TAx-oK-v7L">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Posted By" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TAx-oK-v7L">
                                 <rect key="frame" x="216" y="46" width="91" height="13"/>
                                 <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="10"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -68,6 +68,7 @@
                 <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
             </userDefinedRuntimeAttributes>
             <connections>
+                <outlet property="UIViewColor" destination="dGP-Zu-lqC" id="mol-ho-Lpp"/>
                 <outlet property="lblItem" destination="fsE-3U-ru6" id="C8w-jH-sNs"/>
                 <outlet property="lblPostedBy" destination="TAx-oK-v7L" id="ANj-dS-gCY"/>
             </connections>
