--- a/Roommates/View/Main.storyboard
+++ b/Roommates/View/Main.storyboard
@@ -897,8 +897,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8bG-FL-E18">
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8bG-FL-E18">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="546"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Friends" translatesAutoresizingMaskIntoConstraints="NO" id="ok4-3x-qyU">
                                         <rect key="frame" x="31" y="145" width="313" height="311"/>
@@ -914,8 +915,9 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.086274509799999996" green="0.81960784310000001" blue="0.56078431370000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c1n-mc-yJQ">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c1n-mc-yJQ">
                                 <rect key="frame" x="52" y="588" width="271" height="55"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.047058823530000002" green="0.76470588240000004" blue="0.50980392159999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="20"/>
                                 <state key="normal" title="Get Started">
@@ -933,12 +935,6 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="8bG-FL-E18" firstAttribute="trailing" secondItem="XG4-KO-OIr" secondAttribute="trailing" id="FfS-xw-YDu"/>
-                            <constraint firstItem="8bG-FL-E18" firstAttribute="top" secondItem="6er-36-kaA" secondAttribute="top" id="iXO-ly-To0"/>
-                            <constraint firstItem="8bG-FL-E18" firstAttribute="leading" secondItem="XG4-KO-OIr" secondAttribute="leading" id="llC-fo-Lbn"/>
-                            <constraint firstItem="c1n-mc-yJQ" firstAttribute="top" secondItem="8bG-FL-E18" secondAttribute="bottom" constant="42" id="y3O-Pb-oc3"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="XG4-KO-OIr"/>
                     </view>
                     <connections>
