1 minor bug for now: After logging the user out and signing back in, the key should be set to the one from the firebase instead of the current user key.

--- a/Roommates/View/Main.storyboard
+++ b/Roommates/View/Main.storyboard
@@ -207,7 +207,7 @@
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="15"/>
-                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            <textInputTraits key="textInputTraits"/>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                     <real key="value" value="10"/>
